fix: overlay positioning on safari

--- a/tools/preview/heatmap.css
+++ b/tools/preview/heatmap.css
@@ -11,6 +11,7 @@
  */
  body.appear {
   position: relative;
+  display: block;
 }
 
 .hlx-heatmap-toggle::before {
@@ -34,8 +35,6 @@
 
 .heatmap-overlays {
   display: none;
-  top: 0;
-  left: 0;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 1rem;
   font-weight: bold;
